--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 :root {
     --primary-color: #7C3AED;
     --black-grey: #6B7280;
-    --grey:#D1D5DB;
+    --grey:#F3F4F6;
 }
 
 .container {
@@ -125,6 +125,13 @@ hr {
     padding: 2rem 1rem;
     color: white;
 }
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
+    
+}
+
 .footer .link{
     color: white;
 }
